# SIMDE

./: Cargo.toml  README.md
src/: avx.rs  lib.rs  lookup_tables.rs  simd_ext.rs
